erDiagram
    USERS ||--o{ VEHICLES : quan_ly
    VEHICLES ||--o{ DEVICES : gan_tracker
    DEVICES ||--|| DEVICE_CONFIGURATIONS : cau_hinh
    VEHICLES ||--o{ TRIPS : phat_sinh
    TRIPS ||--o{ TRIP_EVENTS : gom
    VEHICLES ||--o{ ALERTS : sinh_ra
    VEHICLES }o--o{ GEOFENCES : gan_vung
    DEVICES ||--o{ COMMANDS : nhan_lenh

    USERS {
        uuid id
        string email
        string role
    }
    VEHICLES {
        uuid id
        string license_plate
        string status
    }
    DEVICES {
        uuid id
        string serial
        string modem_imei
    }
    DEVICE_CONFIGURATIONS {
        uuid device_id
        string power_profile
        string mqtt_topic
    }
    TRIPS {
        uuid id
        uuid vehicle_id
        timestamp start_time
        timestamp end_time
    }
    TRIP_EVENTS {
        uuid id
        uuid trip_id
        string event_type
    }
    ALERTS {
        uuid id
        uuid vehicle_id
        string severity
    }
    GEOFENCES {
        uuid id
        string name
        string geometry
    }
    COMMANDS {
        uuid id
        uuid device_id
        string command_type
    }
